@startuml
interface monte_carlo_tree_search.node_models.NodeWithChildrenInterface {
}
abstract class monte_carlo_tree_search.node_models.NodeAbstract {
}
class monte_carlo_tree_search.node_models.NodeTerminalFail {
}
interface monte_carlo_tree_search.node_models.NodeInterface {
}
class monte_carlo_tree_search.node_models.NodeTerminalNotFail {
}
class monte_carlo_tree_search.node_models.NodeNotTerminal {
}


monte_carlo_tree_search.node_models.NodeInterface <|-- monte_carlo_tree_search.node_models.NodeWithChildrenInterface
monte_carlo_tree_search.node_models.NodeInterface <|.. monte_carlo_tree_search.node_models.NodeAbstract
monte_carlo_tree_search.node_models.NodeAbstract <|-- monte_carlo_tree_search.node_models.NodeTerminalFail
monte_carlo_tree_search.node_models.NodeAbstract <|-- monte_carlo_tree_search.node_models.NodeTerminalNotFail
monte_carlo_tree_search.node_models.NodeWithChildrenInterface <|.. monte_carlo_tree_search.node_models.NodeNotTerminal
monte_carlo_tree_search.node_models.NodeAbstract <|-- monte_carlo_tree_search.node_models.NodeNotTerminal
@enduml